force-app/main/default/objects/vehiclePossibilities__c/vehiclePossibilities__c.object-meta.xml
<CustomObject>
    <label>Vehicle Possibility</label>
    <nameField>
        <displayFormat>VMODELS-{000000}</displayFormat>
        <label>Vehicle Possibilities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Possibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>