force-app/main/default/objects/vehiclePossibilities__c/fields/modelName__c.field-meta.xml
<CustomField>
    <fullName>modelName__c</fullName>
    <label>Model Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>