force-app/main/default/objects/vehiclePossibilities__c/fields/modelYear__c.field-meta.xml
<CustomField>
    <fullName>modelYear__c</fullName>
    <label>Model Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>