force-app/main/default/objects/vehiclePossibilities__c/fields/Propellant__c.field-meta.xml
<CustomField>
    <fullName>Propellant__c</fullName>
    <label>Propellant</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Propellant</valueSetName>
    </valueSet>
</CustomField>